--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
 <!-- Footer -->
 <footer>
-  <p>@copyright 2021 Edem</p>
+  <p>@copyright 2022 Massaer</p>
 </footer>
     <!-- Swiper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.7.0/swiper-bundle.min.js"></script>
