--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <li class="nav-item">
             <a href="#contact" class="nav-link scroll-link">Contact</a>
           </li>
+          <div class="socials">
+            <span class="icon"><i class="bx bxl-twitter"></i></span>
+            <span class="icon"><i class="bx bxl-discord"></i></span>
+          </div>
 
           <!-- Theme -->
           <li class="nav-item theme-icon">
@@ -71,18 +75,9 @@
         </div>
       </div>
     </div>
-    <!-- Overlay 
-      <div class="overlay"></div>-->
 
     <!-- Hero Image -->
     <img src="./images/hero-bg-1.png" class="hero-img" alt="" />
-    <!-- Social Links -->
-    <div class="socials">
-      <span class="icon"><i class="bx bxl-instagram"></i></span>
-      <span class="icon"><i class="bx bxl-facebook"></i></span>
-      <span class="icon"><i class="bx bxl-github"></i></span>
-    </div>
-
     <!-- Color Control -->
     <div class="control">
       <div class="widget d-flex">
@@ -96,49 +91,27 @@
         <span data-id="#ce00ff"></span>
       </div>
     </div>
-
-    <!-- Hero -->
-
-    <!--<div class="content">
-        <span>learn More</span>
-        <h1>About <span id="type1"></span></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing eli
-        </p>
-        <a href="#" class="btn btn-hero">contat us</a>
-      </div>-->
-
   </header>
   <!-- About Section -->
+  <div class="title">
+    <h1>text welcom to</h1> <h1> our web site</h1>
+  </div>
+
   <section class="section about" id="about">
     <div class="container">
       <div class="about-center d-flex">
         <div class="col-1" data-aos="fade-right" data-aos-duration="1300">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 600">
-            <defs>
-              <style>
-                .cls-1 {
-                  fill-rule: evenodd;
-                }
-              </style>
-            </defs>
-            <path
-              class="cls-1"
-              d="M348.966,185.028C352.5,133.656,390.75,98.4,408.679,84.919c65.653-49.37,156.979-31.683,212.511,6.147,66.582,45.359,84.381,124.626,87.814,168.6,11.7,149.93-115.48,312.737-230.073,307.349-36.811-1.731-88.125-21.605-104.5-62.348-21.744-54.1,38.923-101.571,32.491-167.725C400.873,274.711,344.529,249.615,348.966,185.028Z"
-            />
-            <img src="./images/2776.png" alt="" />
-          </svg>
+          <img src="./images/2776.png" alt="" />
         </div>
         <div class="col-2" data-aos="fade-left" data-aos-duration="1300">
-          <div class="title">
-            <span>Lorem ipsum dolor sit amet.</span>
-            <h1>About Us</h1>
-          </div>
-
+          
           <h3>A story of Hardwork and Perserverance</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur rem odit nihil odio veniam, incidunt officiis totam fugiat? Perferendis ab maxime aperiam voluptates dolorum, quia temporibus corporis odit ducimus.</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur rem odit nihil odio veniam, incidunt
+            officiis totam fugiat? Perferendis ab maxime aperiam voluptates dolorum, quia temporibus corporis odit
+            ducimus.</p>
           <h3>Contact</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit animi quis eaque cumque corrupti quae ab temporibus ullam. Tenetur, quam!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit animi quis eaque cumque corrupti quae ab
+            temporibus ullam. Tenetur, quam!</p>
         </div>
       </div>
     </div>
@@ -154,7 +127,7 @@
       <div class="right right-swiper swiper-container" data-aos="fade-down" data-aos-duration="1300">
         <div class="title">
           <span>Lorem ipsum dolor sit amet.</span>
-          <h1>who we are</h1>
+          <h1>white list</h1>
         </div>
 
 
@@ -193,48 +166,12 @@
       </div>
     </div>
   </section>
-  <!-- Services -->
-  <section class="section services" id="services">
-    <div class="title">
-
-      <div class="row container">
-        <div class="col" data-aos="fade-right" data-aos-duration="1300">
-          <div class="icon"><i class="bx bx-bulb"></i></div>
-          <span>103 Project</span>
-          <h3>UI & UX Design</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis praesentium, dicta adipisci minima rem at
-            quasi expedita eius illum earum.
-          </p>
-        </div>
-
-        <div class="col" data-aos="fade-up" data-aos-duration="1300">
-          <div class="icon"><i class="bx bx-layer"></i></div>
-          <span>106 Project</span>
-          <h3>Graphic Design</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis praesentium, dicta adipisci minima rem at
-            quasi expedita eius illum earum.
-          </p>
-        </div>
-        <div class="col" data-aos="fade-left" data-aos-duration="1300">
-          <div class="icon"><i class="bx bx-desktop"></i></div>
-          <span>109 Project</span>
-          <h3>Web Design</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis praesentium, dicta adipisci minima rem at
-            quasi expedita eius illum earum.
-          </p>
-        </div>
-      </div>
-  </section>
-
   <!-- Porfolio -->
   <section class="section portfolio" id="portfolio">
     <div class="row container">
       <div class="title">
         <span>Lorem ipsum dolor sit amet.</span>
-        <h1>Our Nft</h1>
+        <h1>specifications </h1>
       </div>
 
       <div class="filter-btns d-flex">
@@ -257,14 +194,14 @@
     </div>
   </section>
 
-  
 
+  <div class="title">
+    <span>Lorem ipsum dolor sit amet.</span>
+    <h1>Team</h1>
+  </div>
   <!-- Blog -->
   <section class="section blog" id="blog">
-    <div class="title">
-      <span>Lorem ipsum dolor sit amet.</span>
-      <h1>Team</h1>
-    </div>
+   
 
     <div class="row container">
       <div class="col" data-aos="fade-right" data-aos-duration="1300">
@@ -314,60 +251,6 @@
         <h3>tfp1 POSTE</h3>
         <p>name.</p>
         <a href="">Read more</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <div class="contact-upper" id="contact">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319">
-      <path fill-opacity="1"
-        d="M0,160L48,165.3C96,171,192,181,288,186.7C384,192,480,192,576,165.3C672,139,768,85,864,58.7C960,32,1056,32,1152,53.3C1248,75,1344,117,1392,138.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-      </path>
-    </svg>
-  </div>
-  <section class="section contact">
-    <div class="title">
-      <span>Lorem ipsum dolor sit amet.</span>
-      <h1>Contact Us</h1>
-    </div>
-
-    <div class="contact-center container">
-      <div class="left" data-aos="fade-right" data-aos-duration="1300">
-        <form class="form">
-          <h2>Message Us</h2>
-          <div>
-            <input type="text" placeholder="Name" required>
-            <input type="email" placeholder="Email" required>
-          </div>
-
-          <textarea name="message" cols="10" rows="10" placeholder="Describe Project"></textarea>
-          <button type="submit" class="btn btn-form">Send message</button>
-        </form>
-      </div>
-
-      <div class="right" data-aos="fade-left" data-aos-duration="1300">
-        <div>
-          <span class="icon"><i class="bx bx-user"></i></span>
-          <span class="content">
-            <h3>tiger fighter pixel</h3>
-            <span>John Smith</span>
-          </span>
-        </div>
-        <div>
-          <span class="icon"><i class="bx bx-map"></i></span>
-          <span class="content">
-            <h3>Address</h3>
-            <span>United States</span>
-          </span>
-        </div>
-        <div>
-          <span class="icon"><i class="bx bx-envelope"></i></span>
-          <span class="content">
-            <h3>Email</h3>
-            <span>youtube@gmail.com</span>
-          </span>
-        </div>
       </div>
     </div>
   </section>
