--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
       </div>
     </div>
   </section>
+  <div class="btns"><a href="https://discord.com/" target="_blank">Rejoignez Discord!</a></div>
   <!-- Porfolio -->
   <section class="section portfolio" id="portfolio">
     <div class="row container">
@@ -184,7 +185,9 @@
     </div>
 
     <div class="projects container" data-aos="fade-up" data-aos-duration="1300">
-      <img data-id="graphicDesign" src="./images/blog.jpg" class="item" alt="">
+      
+        <img data-id="graphicDesign" src="./images/blog.jpg" class="item" alt="">
+        
       <img data-id="webDesign" src="./images/web3.jpg" class="item" alt="">
       <img data-id="graphicDesign" src="./images/app3.jpg" class="item" alt="">
       <img data-id="webDesign" src="./images/web1.jpg" class="item" alt="">
